Changelog
----------

1.0b4 (unreleased)
^^^^^^^^^^^^^^^^^^

- Fixed package distribution and documentation. [hvelarde]


1.0b3 (2012-05-28)
^^^^^^^^^^^^^^^^^^

* Fixed NameError: name 'test' is not defined (issue `#17`_).
  [cleberjsantos]


1.0b2 (2012-05-19)
^^^^^^^^^^^^^^^^^^

 * Fixed Picasa and Flickr plugins (issue `#11`_).
   [cleberjsantos]

 * Added validation for Vimeo and DailyMotion (issue `#12`_).
   [cleberjsantos]

 * Patch for bug in Picasa plugin (issue `#13`_).
   [cleberjsantos]


1.0b1 (2012-05-18)
^^^^^^^^^^^^^^^^^^^

 *  Initial release.

.. _`#11`: https://github.com/simplesconsultoria/sc.galleria.support/issues/11
.. _`#12`: https://github.com/simplesconsultoria/sc.galleria.support/issues/12
.. _`#13`: https://github.com/simplesconsultoria/sc.galleria.support/issues/13
.. _`#17`: https://github.com/simplesconsultoria/sc.galleria.support/issues/17
